# numismatic-analysis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: get_raw_data.yml
src/: clean_raw_data.py  get_raw_data.py  main.py  uploader_gcs.py
src/gc_utility/: read_data.py  upload_data.py
