[project]
name = "numismatic-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "google-cloud-storage>=3.2.0",
    "pandas>=2.3.1",
    "requests>=2.32.4",
]
